Resolved z-index issue with animation

--- a/src/PathfindingVisualizer/Dropdown/Dropdown.css
+++ b/src/PathfindingVisualizer/Dropdown/Dropdown.css
@@ -13,13 +13,14 @@
   display: none;
   position: absolute;
   background-color: #00aeef;
+  z-index: 2;
 }
 .nav__submenu-item {
   list-style: none;
-  
+  z-index: 3;
   &:hover {
     background: #2984ec;
-    z-index: -10;
+    z-index: 4;
   }
 }
 
